# cmdmesh

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  worker.py
backend/db/: base.py
backend/dependencies/: auth.py  db.py  redis.py
backend/models/: __init__.py  chat.py  token.py  user.py
backend/routes/: auth.py  chat.py  code.py  search.py
backend/schemas/: auth.py  chat.py  code.py  search.py  user.py
backend/services/: auth_service.py  chat_service.py  code_service.py  email_service.py  otp_service.py  password_reset_service.py  search_service.py  token_service.py  url_service.py
backend/services/providers/: __init__.py  base.py  huggingface.py
backend/tasks/: email_tasks.py
cli/: main.py
cli/auth/: client.py  prompts.py  store.py
cli/commands/: auth.py  chat.py  code.py  search.py
cli/utils/: auth_helpers.py  code_utils.py  display.py
tests/: conftest.py  test_chat.py  test_code.py  test_login.py  test_refresh.py  test_reset_password.py  test_search.py  test_signup.py
